--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,15 @@ version: '3'
 services:
   web:
     build: .
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.starwars.rule=Host(`one.dreamgearweb.com`)"
+      - "traefik.http.routers.starwars.entrypoints=websecure"
+      - "traefik.http.routers.starwars.tls.certresolver=myresolver"
+    networks:
+      - proxy-net
     restart: always
 
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+networks:
+  proxy-net:
+    external: true
