--- a/nginx.conf
+++ b/nginx.conf
@@ -8,23 +8,7 @@ http {
 
     server {
         listen 80;
-        server_name one.dreamgearweb.com;
-
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-
-    server {
-        listen 443 ssl;
-        server_name one.dreamgearweb.com;
-
-        ssl_certificate /etc/letsencrypt/live/one.dreamgearweb.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/one.dreamgearweb.com/privkey.pem;
+        server_name localhost;
 
         root /usr/share/nginx/html;
         index index.html;
